--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,17 @@
+:root {
+  --color: #24BA9F;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Raleway', sans-serif;
+}
+
+.container {
+  max-width: 1050px;
+  margin: 0 auto;
+}
 
