--- a/css/style.css
+++ b/css/style.css
@@ -118,3 +118,55 @@ body {
   opacity: 1;
   pointer-events: all;
 }
+
+
+.slider-bg {
+  height: 500px;
+  background: linear-gradient(#fafafa, #ccc)
+}
+
+.slider {
+  display: flex;
+  height: 500px;
+}
+
+.slider-prev,
+.slider-next {
+  width: 90px;
+  font-size: 80px;
+  color: var(--color);
+  background: none;
+  border: 0;
+  cursor: pointer;
+  outline: none;
+}
+
+.slider-prev:active,
+.slider-next:active {
+  font-size: 70px;
+}
+
+.slider-next {
+  order: 1;
+}
+
+.slider-list {
+  flex-grow: 1;
+  position: relative;
+}
+
+.slider-slide {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.7s;
+}
+
+.slider-slide.active {
+  opacity: 1;
+  pointer-events: all;
+}
