--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 :root {
   --color: #24BA9F;
+  --colorHover: rgb(28, 155, 132);
 }
 
 * {
@@ -13,6 +14,43 @@ body {
 .container {
   max-width: 1050px;
   margin: 0 auto;
+}
+
+.btn {
+  background: var(--color);
+  cursor: pointer;
+  border-radius: 6px;
+  text-transform: uppercase;
+  color: #fff;
+  border: 0;
+  padding: 10px 30px;
+  display: inline-block;
+  transition: 0.5s;
+}
+
+.btn:hover {
+  background: var(--colorHover);
+}
+
+.section {
+  padding: 50px 0 65px;
+}
+
+.section-title {
+  font-size: 22px;
+  text-transform: uppercase;
+  color: #575757;
+  font-weight: 600;
+  margin-bottom: 45px;
+}
+
+.section-title::after {
+  content: "";
+  width: 320px;
+  height: 8px;
+  background: var(--color);
+  display: block;
+  margin-top: 5px;
 }
 
 
@@ -177,4 +215,102 @@ body {
 .slider-slide.active {
   opacity: 1;
   pointer-events: all;
+}
+
+
+
+/* form */
+
+.form {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-left {
+  width: 630px;
+}
+
+.form-right {
+  width: 340px;
+}
+
+.form-row {
+  margin-bottom: 26px;
+}
+
+.form-control {
+  height: 65px;
+  border: 1px solid var(--color);
+  width: 100%;
+  font-size: 33px;
+  font-weight: 300;
+  padding: 0 15px;
+  outline: none;
+}
+
+.form-control:focus {
+  box-shadow: inset 0 0 0 1px var(--color);
+}
+
+.form-label {
+  position: absolute;
+  left: -99999px;
+}
+
+.form-control::placeholder {
+  color: #ccc;
+}
+
+textarea.form-control {
+  height: 190px;
+  padding: 15px;
+  resize: none;
+}
+
+.form-img {
+  margin-top: -15px;
+  height: 195px;
+  background-image: url(../images/red_chair.png);
+  background-repeat: no-repeat;
+  background-position: center -20px;
+}
+
+.form-checkbox {
+  display: flex;
+  align-items: center;
+  margin: 35px 0;
+}
+
+.form-checkbox input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 50px;
+  height: 50px;
+  border: 1px solid var(--color);
+  outline: none;
+  margin-right: 15px;
+  flex-shrink: 0;
+}
+
+.form-checkbox input:checked {
+  background-image: url(../images/form_ok.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.form-checkbox input:focus {
+  box-shadow: inset 0 0 0 1px var(--color);
+}
+
+.form-checkbox span {
+  font-weight: 300;
+  color: #aaa;
+}
+
+.form-submit {
+  width: 100%;
+  height: 70px;
+  font-weight: bold;
+  font-size: 30px;
 }
