--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body {
 }
 
 .section {
-  padding: 50px 0 65px;
+  padding: 30px 0 65px;
 }
 
 .section-title {
@@ -68,6 +68,7 @@ body {
   height: 40px;
   background: #000;
 }
+
 .page-header .container {
   display: flex;
   justify-content: space-between;
@@ -107,6 +108,7 @@ body {
 
 .page-nav-list li {
   position: relative;
+  z-index: 1;
 }
 
 .page-nav-list a {
@@ -142,7 +144,7 @@ body {
   height: 15px;
   display: block;
   position: absolute;
-  left:0;
+  left: 0;
   top: -15px;
   background: transparent;
 }
@@ -168,7 +170,7 @@ body {
   text-transform: none;
 }
 
-.page-nav-list li:hover .page-nav-sublist {
+.page-nav-list li:hover > .page-nav-sublist {
   opacity: 1;
   pointer-events: all;
 }
